# sfml-physics-playground

./: .CMakeLists.txt.un~  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt~  CMakePresets.json  README.md  main.cpp
src/: EditGameState.cpp  EditGameState.hpp  MenuGameState.cpp  MenuGameState.hpp  PlayGameState.cpp  PlayGameState.hpp  ball.cpp  ball.hpp  component.cpp  component.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  fps-counter.cpp  fps-counter.hpp  gameState.hpp  helperFunctions.cpp  helperFunctions.hpp  main.cpp  particles.cpp  particles.hpp  test.cpp
src/Entities/: ball.cpp  ball.hpp  food.cpp  food.hpp  fps-counter.cpp  fps-counter.hpp  particles.cpp  particles.hpp  ship.cpp  ship.hpp  weightValues.cpp  weightValues.hpp
src/States/: EditGameState.cpp  EditGameState.hpp  MenuGameState.cpp  MenuGameState.hpp  PlayAstroGameState.cpp  PlayAstroGameState.hpp  PlayGameState.cpp  PlayGameState.hpp  gameState.hpp
src/UI/: textButtons.cpp  textButtons.hpp
src/tests/: test.cpp
